<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.3</version>
	</parent>
	<groupId>hu.kunb</groupId>
	<artifactId>paymentapi</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>paymentapi</name>
	<description>Kun Bs homework for kibit</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
		<jackson-databind-nullable.version>0.2.6</jackson-databind-nullable.version>
		<springdoc-openapi-starter-webmvc-ui.version>2.8.5</springdoc-openapi-starter-webmvc-ui.version>
		<lombok.version>1.18.36</lombok.version>
		<openapi-generator-maven-plugin.version>7.0.1</openapi-generator-maven-plugin.version>
		<spring-kafka.version>3.3.3</spring-kafka.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<pitest-maven.version>1.15.2</pitest-maven.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka</artifactId>
		</dependency>
		<!-- OpenAPI (Swagger) -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>${springdoc-openapi-starter-webmvc-ui.version}</version>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>${jackson-databind-nullable.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.pitest</groupId>
			<artifactId>pitest-parent</artifactId>
			<version>${pitest-maven.version}</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.pitest</groupId>
			<artifactId>pitest-junit5-plugin</artifactId>
			<version>1.2.1</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>${openapi-generator-maven-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<inputSpec>${project.basedir}/src/main/resources/openapi.yaml</inputSpec>
					<generatorName>spring</generatorName>
					<output>${project.build.directory}/generated-sources/openapi</output>
					<configOptions>
						<interfaceOnly>true</interfaceOnly> <!-- Csak az interfészek generálása -->
						<useSpringBoot3>true</useSpringBoot3>
						<java8>true</java8>
					</configOptions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.pitest</groupId>
				<artifactId>pitest-maven</artifactId>
				<configuration>
					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens
						java.base/java.util=ALL-UNNAMED
					</argLine>
					<withHistory>true</withHistory>
					<historyInputFile>../mutationhistory/${project.artifactId}.historyfile</historyInputFile>
					<historyOutputFile>../mutationhistory/${project.artifactId}.historyfile</historyOutputFile>
					<excludedClasses>
						<excludedClass>hu.kunb.paymentapi.config.OpenAPIConfig</excludedClass>
						<excludedClass>hu.kunb.paymentapi.ServletInitializer</excludedClass>
						<excludedClass>org.openapitools.*</excludedClass>
						<excludedClass>hu.kunb.paymentapi.rest.controller.GlobalExceptionHandler</excludedClass>
						<excludedClass>hu.kunb.paymentapi.config.AppConfig</excludedClass>
					</excludedClasses>

<!--					<targetClasses>-->
<!--						<param></param>-->
<!--					</targetClasses>-->
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>
